# Copilotkit-vanguard

./: README.md
college-planner/agent/: langgraph.json  pyproject.toml
college-planner/agent/college_planner/: agent.py  chat.py  demo.py  schools.json  search.py  state.py  suql_tool.py  trips.py
college-planner/agent/college_planner/suql/: faiss_embedding.py  free_text_fcns_server.py  prompt_continuation.py
college-planner/agent/college_planner/suql/prompts/: if_db_classification.prompt  parser_suql.prompt
college-planner/agent/college_planner/suql/sql_free_text_support/: execute_free_text_sql.py
college-planner/ui/app/: layout.tsx  page.tsx
college-planner/ui/lib/hooks/: use-trips.tsx
